[gd_scene load_steps=28 format=3 uid="uid://nm5yj7ykmvcd"]

[ext_resource type="Script" path="res://gui.gd" id="1_wyhwq"]
[ext_resource type="Shader" path="res://circle.gdshader" id="2_iwsed"]
[ext_resource type="FontFile" uid="uid://ckc72m5mswmg6" path="res://kroe0555.ttf" id="2_mwt7a"]
[ext_resource type="Script" path="res://volume_slider.gd" id="3_escg1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8sxum"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y0opi"]

[sub_resource type="LabelSettings" id="LabelSettings_121xd"]
font_size = 36
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hr200"]
font_size = 46

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m27au"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vobmc"]

[sub_resource type="LabelSettings" id="LabelSettings_7yv2d"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4m64l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4a28r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i0lyv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l33ud"]

[sub_resource type="LabelSettings" id="LabelSettings_le85d"]
font_size = 24
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_smqrh"]
font_size = 26
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yjkpk"]
shader = ExtResource("2_iwsed")
shader_parameter/circleRadius = 0.1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ld2f4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sm80x"]

[sub_resource type="LabelSettings" id="LabelSettings_lke5j"]
font = ExtResource("2_mwt7a")
font_size = 64
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hx3rb"]
font = ExtResource("2_mwt7a")
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uyov8"]
bg_color = Color(0.299547, 0.299547, 0.299547, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j752e"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mdha3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vhx2l"]

[sub_resource type="LabelSettings" id="LabelSettings_bsjsb"]
font = ExtResource("2_mwt7a")

[node name="GUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_wyhwq")

[node name="GameScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GameScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VSeparator" type="VSeparator" parent="GameScreen/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_8sxum")

[node name="VBoxContainer" type="VBoxContainer" parent="GameScreen/HBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HSeparator3" type="HSeparator" parent="GameScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_y0opi")

[node name="GameTimeElapsedLabel" type="Label" parent="GameScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "00:00:00"
label_settings = SubResource("LabelSettings_121xd")

[node name="GameTimer" type="Timer" parent="GameScreen/HBoxContainer/VBoxContainer/GameTimeElapsedLabel"]
process_mode = 1
autostart = true

[node name="HSeparator" type="HSeparator" parent="GameScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_y0opi")

[node name="HBoxContainer" type="HBoxContainer" parent="GameScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PassCharacter1" type="Label" parent="GameScreen/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "_"
label_settings = SubResource("LabelSettings_hr200")

[node name="PassCharacter2" type="Label" parent="GameScreen/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "_"
label_settings = SubResource("LabelSettings_hr200")

[node name="PassCharacter3" type="Label" parent="GameScreen/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "_"
label_settings = SubResource("LabelSettings_hr200")

[node name="PassCharacter4" type="Label" parent="GameScreen/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "_"
label_settings = SubResource("LabelSettings_hr200")

[node name="PassCharacter5" type="Label" parent="GameScreen/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "_"
label_settings = SubResource("LabelSettings_hr200")

[node name="PassCharacter6" type="Label" parent="GameScreen/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "_"
label_settings = SubResource("LabelSettings_hr200")

[node name="HSeparator2" type="HSeparator" parent="GameScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_m27au")

[node name="VSeparator2" type="VSeparator" parent="GameScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_8sxum")

[node name="VBoxContainer2" type="VBoxContainer" parent="GameScreen/HBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="GameScreen/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_vobmc")

[node name="FPSLabel" type="Label" parent="GameScreen/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "000 FPS"
label_settings = SubResource("LabelSettings_7yv2d")
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="GameScreen/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_4m64l")

[node name="ReturnerLabel" type="Label" parent="GameScreen/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Returners: 0 [R]"
horizontal_alignment = 2

[node name="TeleporterLabel" type="Label" parent="GameScreen/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Teleporters: 0 [T]"
horizontal_alignment = 2

[node name="FlashlightLabel" type="Label" parent="GameScreen/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Flashlight ON [F]"
horizontal_alignment = 2

[node name="FlashlightBar" type="ProgressBar" parent="GameScreen/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="GameScreen/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_4m64l")

[node name="VSeparator3" type="VSeparator" parent="GameScreen/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_4a28r")

[node name="HBoxContainer2" type="HBoxContainer" parent="GameScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VSeparator" type="VSeparator" parent="GameScreen/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_i0lyv")

[node name="VBoxContainer" type="VBoxContainer" parent="GameScreen/HBoxContainer2"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="GameScreen/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_stretch_ratio = 0.2
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l33ud")

[node name="NotificationLabel" type="Label" parent="GameScreen/HBoxContainer2/VBoxContainer"]
visible = false
layout_mode = 2
text = "This is a notification message."
label_settings = SubResource("LabelSettings_le85d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NotificationTimer" type="Timer" parent="GameScreen/HBoxContainer2/VBoxContainer/NotificationLabel"]
wait_time = 5.0
one_shot = true

[node name="HSeparator2" type="HSeparator" parent="GameScreen/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l33ud")

[node name="InteractLabel" type="Label" parent="GameScreen/HBoxContainer2/VBoxContainer"]
visible = false
layout_mode = 2
text = "Interact ( E )"
label_settings = SubResource("LabelSettings_smqrh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="GameScreen/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_stretch_ratio = 0.2
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l33ud")

[node name="VSeparator2" type="VSeparator" parent="GameScreen/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_i0lyv")

[node name="CenterContainer" type="CenterContainer" parent="GameScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="GameScreen/CenterContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="GameScreen/CenterContainer/Control"]
material = SubResource("ShaderMaterial_yjkpk")
custom_minimum_size = Vector2(8, 8)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WinScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="WinScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="WinScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSeparator" type="VSeparator" parent="WinScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_ld2f4")

[node name="VBoxContainer" type="VBoxContainer" parent="WinScreen/HBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="WinScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_sm80x")

[node name="EscapedLabel" type="Label" parent="WinScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "ESCAPED!"
label_settings = SubResource("LabelSettings_lke5j")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TimeTakenLabel" type="Label" parent="WinScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Time taken: "
label_settings = SubResource("LabelSettings_hx3rb")
vertical_alignment = 1
uppercase = true

[node name="CluesFoundLabel" type="Label" parent="WinScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Clues found: "
label_settings = SubResource("LabelSettings_hx3rb")
vertical_alignment = 1
uppercase = true

[node name="WinMethodLabel" type="Label" parent="WinScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_hx3rb")
vertical_alignment = 1
uppercase = true

[node name="RestartButton" type="Button" parent="WinScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_mwt7a")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_uyov8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_j752e")
theme_override_styles/normal = SubResource("StyleBoxFlat_j752e")
action_mode = 0
text = "RESTART"

[node name="HSeparator2" type="HSeparator" parent="WinScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_sm80x")

[node name="VSeparator2" type="VSeparator" parent="WinScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_ld2f4")

[node name="PauseScreen" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="HBoxContainer" type="HBoxContainer" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSeparator" type="VSeparator" parent="PauseScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_mdha3")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen/HBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PauseScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_vhx2l")

[node name="RestartButton" type="Button" parent="PauseScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_mwt7a")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_uyov8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_j752e")
theme_override_styles/normal = SubResource("StyleBoxFlat_j752e")
action_mode = 0
text = "RESTART"

[node name="HBoxContainer" type="HBoxContainer" parent="PauseScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseScreen/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Volume"
label_settings = SubResource("LabelSettings_bsjsb")
uppercase = true

[node name="VolumeSlider" type="HSlider" parent="PauseScreen/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
script = ExtResource("3_escg1")
bus_name = "Master"

[node name="HSeparator2" type="HSeparator" parent="PauseScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_vhx2l")

[node name="VSeparator2" type="VSeparator" parent="PauseScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_mdha3")

[connection signal="timeout" from="GameScreen/HBoxContainer/VBoxContainer/GameTimeElapsedLabel/GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="GameScreen/HBoxContainer2/VBoxContainer/NotificationLabel/NotificationTimer" to="." method="_on_notification_timer_timeout"]
[connection signal="pressed" from="WinScreen/HBoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseScreen/HBoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
